--- a/project/SASS/_header.sass
+++ b/project/SASS/_header.sass
@@ -1,3 +1,6 @@
+@import "mixin"
+@import "vars"
+
 header
   min-height: 151px
 
@@ -208,7 +211,7 @@ header
     border-left: none
     min-width: 37px
     height: 100%
-    background: url(../lesson5/img/search.svg) 50% no-repeat
+    background: url(../img/search.svg) 50% no-repeat
     background-size: 14px 14px
     border-bottom-right-radius: 3px
     border-top-right-radius: 3px
@@ -377,7 +380,7 @@ header
     display: flex
     justify-content: flex-end
     align-items: flex-end
-    background: url(../lesson5/img/menu_man.png) no-repeat
+    background: url(../img/menu_man.png) no-repeat
     height: 99px
     padding: 10px
     margin-top: 22px
