--- a/project/SASS/_checkout.sass
+++ b/project/SASS/_checkout.sass
@@ -121,6 +121,10 @@ html, body
     margin: 5px 0 0
     padding: 0
     font-size: 12px
+  &__error_form
+    width: 390px
+    color: red
+    font-size: 12px
 
 
 .new-user-form
@@ -260,6 +264,10 @@ html, body
     color: red
     margin: 5px 0 0
     padding: 0
+    font-size: 12px
+  &__error_form
+    width: 390px
+    color: red
     font-size: 12px
   &__success
     color: green
