--- a/project/SASS/_index.sass
+++ b/project/SASS/_index.sass
@@ -39,7 +39,7 @@ html, body
   height: 614px
   &__image
     height: 100%
-    background: url(../lesson5/img/man.png) -300px -51px
+    background: url(./img/man.png) -300px -51px
   &__text
     float: left
     margin-top: 224px
@@ -87,16 +87,16 @@ html, body
     padding: 16px 19px
     box-sizing: border-box
   &__man
-    background: url(../lesson5/img/offer-for-man.png)
+    background: url(./img/offer-for-man.png)
     border: 1px solid #ffffff
   &__accesories
-    background: url(../lesson5/img/offers-acc.png)
+    background: url(./img/offers-acc.png)
     border: 1px solid #ffffff
   &__woman
-    background: url(../lesson5/img/offers-woman.png)
+    background: url(./img/offers-woman.png)
     border: 1px solid #ffffff
   &__kids
-    background: url(../lesson5/img/offers-kids.png)
+    background: url(./img/offers-kids.png)
     border: 1px solid #ffffff
   &__logo-man
     background-color: #ffffff
@@ -201,7 +201,7 @@ html, body
     box-sizing: border-box
     transition: opacity 0.25s
   &__arrow
-    margin-right: 8px
+    margin-left: 8px
   &__name
     @include font(13px, 400, $color-black)
     text-transform: uppercase
@@ -225,7 +225,7 @@ html, body
   padding-top: 146px
   padding-left: 39px
   width: 767px
-  background: url(../lesson5/img/offer_main.png) no-repeat
+  background: url(./img/offer_main.png) no-repeat
   &__logo-up
     @include font(54px, 700, #ffffff)
   &__logo-word
@@ -266,7 +266,7 @@ html, body
   min-width: $site-width
   position: relative
   height: 438px
-  background: url("../lesson5/img/subscribe.png") no-repeat center
+  background: url("../img/subscribe.png") no-repeat center
   -webkit-background-size: cover
   background-size: cover
   &:after
