--- a/homework7/task1-2-3/SASS/style.sass
+++ b/homework7/task1-2-3/SASS/style.sass
@@ -2,8 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
 
-@import "SASS/vars"
-@import "SASS/mixin"
+@import "../SASS/vars"
+@import "../SASS/mixin"
 
 body
   font-family: 'Lato', sans-serif
@@ -15,5 +15,5 @@ body
   margin: 0 auto
 
 
-@import "SASS/index"
+@import "../SASS/index"
 
