--- a/project/SASS/_index.sass
+++ b/project/SASS/_index.sass
@@ -266,7 +266,7 @@ html, body
   min-width: $site-width
   position: relative
   height: 438px
-  background: url("../img/subscribe.png") no-repeat center
+  background: url("./img/subscribe.png") no-repeat center
   -webkit-background-size: cover
   background-size: cover
   &:after
