--- a/project/SASS/_header.sass
+++ b/project/SASS/_header.sass
@@ -81,7 +81,6 @@ header
   top: 40px
   left: -18px
   width: 262px
-  min-height: 440px
   border-radius: 5px
   background-color: #ffffff
   padding: 20px
@@ -133,6 +132,8 @@ header
     padding: 0
     color: #c0c0c0
     font-size: 16px
+    &:hover
+      color: $color-pink
   &__price
     display: flex
     justify-content: space-between
@@ -211,7 +212,7 @@ header
     border-left: none
     min-width: 37px
     height: 100%
-    background: url(../img/search.svg) 50% no-repeat
+    background: url(./img/search.svg) 50% no-repeat
     background-size: 14px 14px
     border-bottom-right-radius: 3px
     border-top-right-radius: 3px
@@ -380,7 +381,7 @@ header
     display: flex
     justify-content: flex-end
     align-items: flex-end
-    background: url(../img/menu_man.png) no-repeat
+    background: url(./img/menu_man.png) no-repeat
     height: 99px
     padding: 10px
     margin-top: 22px
