--- a/project/SASS/_shopping-cart.sass
+++ b/project/SASS/_shopping-cart.sass
@@ -30,6 +30,7 @@ html, body
 .shopping-list
   &__button
     padding: 20px 39px
+    text-decoration: none
     text-transform: uppercase
     border: 1px solid #eaeaea
     box-sizing: border-box
@@ -189,6 +190,10 @@ html, body
   width: 100%
   border-collapse: collapse
   table-layout: auto
+  &__bought-block
+    width: inherit
+    border-collapse: collapse
+    table-layout: auto
   &__cell-head
     text-align: center
     text-transform: uppercase
