--- a/project/SASS/_header.sass
+++ b/project/SASS/_header.sass
@@ -113,7 +113,7 @@ header
     color: #e4af48
     padding: 0
     margin: 0 0 12px
-  &__item-price
+  &__item-info
     font-size: 12px
     font-weight: normal
     color: #f16d7f
