--- a/project/style.css
+++ b/project/style.css
@@ -1250,6 +1250,13 @@ html, body {
     font-weight: 400;
     color: #6f6e6e;
     margin-top: 21px; }
+  .price__slider {
+    display: inline-block;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    height: 16px;
+    position: relative; }
 
 .size {
   width: 282.3333333333px; }
@@ -1321,7 +1328,8 @@ html, body {
     font-size: 14px;
     font-weight: 400;
     color: #6f6e6e;
-    margin: 0; }
+    margin: 0;
+    cursor: pointer; }
   .sort-block__arrow {
     position: relative;
     width: 0;
@@ -1355,15 +1363,14 @@ html, body {
   transition: color 0.5s;
   font-size: 16px;
   font-weight: 300;
-  color: #c4c4c4; }
+  color: #c4c4c4;
+  cursor: pointer; }
 .product-item-list-nav__list-point {
   margin-right: 16px;
   color: #c4c4c4; }
-  .product-item-list-nav__list-point_active-page .product-item-list-nav__link {
+  .product-item-list-nav__list-point_active-page {
     color: #f16d7f; }
-  .product-item-list-nav__list-point:nth-child(8) {
-    margin-right: 0; }
-  .product-item-list-nav__list-point:nth-child(7) {
+  .product-item-list-nav__list-point:last-child {
     margin-right: 0; }
   .product-item-list-nav__list-point:hover .product-item-list-nav__link {
     color: #f16d7f; }
