--- a/php2-6/app/frontend/views/lk/login.twig
+++ b/php2-6/app/frontend/views/lk/login.twig
@@ -5,11 +5,13 @@
             <input type="email" class="form-control" id="exampleInputEmail1" name="Login[login]" aria-describedby="emailHelp"
                    placeholder="Enter login" value="{{ data.login }}">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <small class="form-text login-error">{{ data.error.loginAvailable }}</small>
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
                    name="Login[password]" value="{{ data.password }}">
+            <small class="form-text login-error">{{ data.error.passCheck }}</small>
         </div>
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1" name="Login[remember]">
