--- a/php2-6/app/frontend/views/widgets/navbar.twig
+++ b/php2-6/app/frontend/views/widgets/navbar.twig
@@ -29,6 +29,9 @@
             <li class="nav-item">
                     <a class="nav-link" href="/admin">For Admin</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/tests">Tests</a>
+            </li>
             {% endif %}
             {# MENU #}
         </ul>
