--- a/php2-6/public/assets/css/style.css
+++ b/php2-6/public/assets/css/style.css
@@ -15,3 +15,10 @@ html, body {
 small.login-error {
     color: red !important;
 }
+
+.testFiled {
+    margin-right: 10px;
+}
+.testBlock {
+    margin-left: 30px;
+}
