--- a/php2-6/app/backend/views/widgets/navbar.twig
+++ b/php2-6/app/backend/views/widgets/navbar.twig
@@ -24,6 +24,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/admin/good/create">Add good</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/tests">Tests</a>
+            </li>
             {# MENU #}
         </ul>
     </div>
